# MP3MediaPlayer

./: .gitignore  CMakeLists.txt  Files.cpp  Files.h  PlayMP3.cpp  PlayMP3.h  library.cpp  library.h  main.cpp  queue.cpp  vcpkg.json
src/: Files.cpp  Files.h  Menu.cpp  Menu.h  PlayMP3.cpp  PlayMP3.h  library.cpp  library.h  main.cpp  queue.cpp  queue.h
src/MP3MediaPlayer/: PlayMP3.cpp  PlayMP3.h
src/PlaylistManager/: MusicObserver.h  PlaylistManager.cpp  PlaylistManager.h
